--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -64,6 +64,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/row2"
         android:layout_width="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,4 +117,59 @@
             android:elevation="5dp"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/row2"
+        android:layout_width="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/row1"
+        android:layout_height="0dp">
+        <TextView
+            android:id="@+id/help"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:text="Help"
+            android:elevation="5dp"
+            android:padding="10dp"
+            android:background="@color/primaryColor"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
+            android:textAlignment="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/map"
+            app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+            android:id="@+id/map"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/help"
+            android:background="@color/primaryColor"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
+            app:layout_constraintEnd_toStartOf="@id/emergency"
+            android:text="Map"
+            android:padding="10dp"
+            android:textAlignment="center"
+            android:elevation="5dp"
+            />
+        <TextView
+            android:id="@+id/emergency"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/map"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/primaryColor"
+            android:textColor="@color/white"
+            android:layout_margin="10dp"
+            android:text="Emergency"
+            android:padding="10dp"
+            android:textAlignment="center"
+            android:elevation="5dp"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
