--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -6,170 +6,225 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:padding="20dp"
     tools:context=".MainDashboard">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/row1"
-        android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"
-        android:background="@color/white"
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_margin="20dp"
+        tools:text="@tools:sample/full_names"
+        android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="0dp">
-        <TextView
-            android:id="@+id/profile"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:text="Profile"
-            android:elevation="5dp"
-            android:padding="10dp"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:elevation="10dp"
+        android:id="@+id/bus"
+        android:background="@drawable/border"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/row1"
+            android:layout_width="match_parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/Booking"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-            android:id="@+id/Booking"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/profile"
-            android:layout_margin="10dp"
-            app:layout_constraintEnd_toStartOf="@id/History"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:text="Booking"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:elevation="5dp"
-            />
-        <TextView
-            android:id="@+id/History"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/Booking"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="10dp"
-            android:text="History"
             android:padding="10dp"
-            android:textAlignment="center"
-            android:elevation="5dp"
-            />
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="0dp">
+            <TextView
+                android:id="@+id/profile"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:text=""
+                android:elevation="5dp"
+                android:padding="10dp"
+                android:background="@color/primaryColor"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/Booking"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                android:id="@+id/Booking"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:visibility="invisible"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/profile"
+                android:layout_margin="10dp"
+                app:layout_constraintEnd_toStartOf="@id/History"
+                android:background="@color/primaryColor"
+                android:textColor="@color/white"
+                android:text=""
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:elevation="5dp"
+                />
+            <TextView
+                android:id="@+id/History"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/Booking"
+                android:background="@color/primaryColor"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_margin="10dp"
+                android:text=""
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:elevation="5dp"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/row2"
+            android:layout_width="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/white"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/row1"
+            android:layout_height="0dp">
+            <TextView
+                android:id="@+id/help"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:text=" "
+                android:elevation="5dp"
+                android:padding="10dp"
+                android:background="#FF0000"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/map"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                android:id="@+id/map"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/help"
+                android:background="@color/primaryColor"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toStartOf="@id/emergency"
+                android:text=""
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:elevation="5dp"
+                />
+            <TextView
+                android:id="@+id/emergency"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/map"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@color/primaryColor"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                android:text=""
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:elevation="5dp"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/row3"
+            android:layout_width="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/white"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/row2"
+            android:layout_height="0dp">
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:text=""
+                android:elevation="5dp"
+                android:padding="10dp"
+                android:background="@color/primaryColor"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/gap"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <TextView
+                android:id="@+id/gap"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/status"
+                android:background="@color/primaryColor"
+                android:visibility="invisible"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                app:layout_constraintEnd_toStartOf="@id/logout"
+                android:text="Map"
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:elevation="5dp"
+                />
+            <TextView
+                android:id="@+id/logout"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/gap"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@color/primaryColor"
+                android:textColor="@color/white"
+                android:layout_margin="10dp"
+                android:text=""
+                android:padding="10dp"
+                android:textAlignment="center"
+                android:elevation="5dp"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/row2"
-        android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/white"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@id/row1"
-        android:layout_height="0dp">
-        <TextView
-            android:id="@+id/help"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:text="Help"
-            android:elevation="5dp"
-            android:padding="10dp"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:textAlignment="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/map"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-            android:id="@+id/map"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/help"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            app:layout_constraintEnd_toStartOf="@id/emergency"
-            android:text="Map"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:elevation="5dp"
-            />
-        <TextView
-            android:id="@+id/emergency"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/map"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:text="Emergency"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:elevation="5dp"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/row2"
-        android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/white"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@id/row1"
-        android:layout_height="0dp">
-        <TextView
-            android:id="@+id/help"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:text="Help"
-            android:elevation="5dp"
-            android:padding="10dp"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:textAlignment="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/map"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-            android:id="@+id/map"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/help"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            app:layout_constraintEnd_toStartOf="@id/emergency"
-            android:text="Map"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:elevation="5dp"
-            />
-        <TextView
-            android:id="@+id/emergency"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/map"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/primaryColor"
-            android:textColor="@color/white"
-            android:layout_margin="10dp"
-            android:text="Emergency"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:elevation="5dp"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:background="@color/primaryLightColor"
+        android:padding="10dp"
+        android:text="Slots are available. Click to book."
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/bus"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:background="@color/secondaryColor"
+        android:padding="10dp"
+        android:text="Timer"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
