--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -110,7 +110,7 @@
             android:background="@color/primaryColor"
             android:textColor="@color/white"
             android:layout_margin="10dp"
-            android:text="Emergency"
+            android:text="Logout"
             android:padding="10dp"
             android:textAlignment="center"
             android:elevation="5dp"
