--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:padding="10dp"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".ActivityProfile">
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,6 +18,7 @@
         app:layout_constraintVertical_weight="3"
         android:layout_height="0dp">
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@mipmap/ic_launcher_round"
@@ -62,6 +64,7 @@
             android:padding="10dp"
             />
         <TextView
+            android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
