--- a/app/src/main/res/layout/navigation_header_main.xml
+++ b/app/src/main/res/layout/navigation_header_main.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:background="@mipmap/ic_launcher_main"
+    android:layout_height="150dp"
+    android:background="@drawable/logo"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="100dp"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="abcdke"
         android:paddingTop="50dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_main_foreground" />
 
     <TextView
         android:layout_width="match_parent"
