--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,32 +7,37 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/home"
+            android:id="@+id/nav_home"
+            android:iconTint="@color/black"
             android:icon="@drawable/ic_home_black_24dp"
-            android:title="abcd"/>
+            android:title="Home"/>
         <item
-            android:id="@+id/nav_add_donate_schedule"
+            android:id="@+id/nav_history"
             android:icon="@drawable/ic_schedule_black_24dp"
-            android:title="defg"/>
+            android:title="History"/>
         <item
-            android:id="@+id/nav_show_pending_donate_schedule"
-            android:icon="@drawable/ic_schedule_black_24dp"
-            android:title="sdlkjf"/>
-
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_profile"
+            android:title="Profile"/>
+        <item
+            android:id="@+id/nav_help"
+            android:icon="@drawable/ic_email_black_24dp"
+            android:title="Help"/>
+        <item
+            android:id="@+id/nav_contact"
+            android:icon="@drawable/ic_info_outline_black_24dp"
+            android:title="Contact" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_phone_black_24dp"
+            android:title="Logout" />
     </group>
 
-    <item android:title="Communicate"
+   <!-- <item android:title="Communicate"
         android:id="@+id/group_title_1">
         <menu>
-            <item
-                android:id="@+id/about"
-                android:icon="@drawable/ic_info_outline_black_24dp"
-                android:title="string/about" />
-            <item
-                android:id="@+id/contact"
-                android:icon="@drawable/ic_phone_black_24dp"
-                android:title="string/contact" />
+
         </menu>
-    </item>
+    </item>-->
 
 </menu>
