--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,8 +6,7 @@
     android:padding="10dp"
     android:background="@color/white"
     android:layout_marginTop="?attr/actionBarSize"
-    android:layout_height="match_parent"
-    tools:context=".ActivityProfile">
+    android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_layout"
         app:layout_constraintTop_toTopOf="parent"
