--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/a"
+        android:layout_width="match_parent"
+        android:elevation="10dp"
+        android:layout_margin="20dp"
+        android:outlineProvider="paddedBounds"
+        android:padding="10dp"
+        android:text="BKash"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"/>
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/b"
+        android:layout_width="match_parent"
+        android:elevation="10dp"
+        android:layout_margin="20dp"
+        android:padding="10dp"
+        android:outlineProvider="bounds"
+        android:text="Nogod"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"/>
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/c"
+        android:layout_width="match_parent"
+        android:elevation="10dp"
+        android:layout_margin="20dp"
+        android:outlineProvider="paddedBounds"
+        android:padding="10dp"
+        android:text="UCash"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
