--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -10,8 +10,9 @@
     <TextView
         android:id="@+id/welcomeText"
         android:layout_margin="20dp"
-        tools:text="@tools:sample/full_names"
+        tools:text="Available slots"
         android:textSize="24sp"
+        android:layout_marginTop="100dp"
         android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +42,9 @@
                 android:id="@+id/profile"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:text=""
+                android:text="A1"
+                android:gravity="center"
+                android:textSize="24sp"
                 android:elevation="5dp"
                 android:padding="10dp"
                 android:background="@color/primaryColor"
@@ -56,13 +59,13 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:visibility="invisible"
+
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/profile"
                 android:layout_margin="10dp"
                 app:layout_constraintEnd_toStartOf="@id/History"
                 android:background="@color/primaryColor"
                 android:textColor="@color/white"
-                android:text=""
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:elevation="5dp"
@@ -74,10 +77,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/Booking"
                 android:background="@color/primaryColor"
+                android:text="B1"
+                android:gravity="center"
+                android:textSize="24sp"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="10dp"
-                android:text=""
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:elevation="5dp"
@@ -97,10 +102,12 @@
                 android:id="@+id/help"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:text=" "
                 android:elevation="5dp"
                 android:padding="10dp"
                 android:background="#FF0000"
+                android:text="A2"
+                android:gravity="center"
+                android:textSize="24sp"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
                 android:textAlignment="center"
@@ -133,7 +140,9 @@
                 android:background="@color/primaryColor"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
-                android:text=""
+                android:text="B2"
+                android:gravity="center"
+                android:textSize="24sp"
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:elevation="5dp"
@@ -152,7 +161,9 @@
                 android:id="@+id/status"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:text=""
+                android:text="A3"
+                android:gravity="center"
+                android:textSize="24sp"
                 android:elevation="5dp"
                 android:padding="10dp"
                 android:background="@color/primaryColor"
@@ -188,7 +199,9 @@
                 android:background="@color/primaryColor"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
-                android:text=""
+                android:text="B3"
+                android:gravity="center"
+                android:textSize="24sp"
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:elevation="5dp"
