--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -180,7 +180,7 @@
                         android:background="#00000000"
                         android:transitionName="tran0"
                         android:elevation="0dp"
-                        android:text="New User? SIGN UP"
+                        android:text="SIGN UP"
                         android:textColor="#000"/>
                 </LinearLayout>
             </LinearLayout>
