--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -18,12 +18,12 @@
 Email : support@vparking.com"
         android:lineHeight="45dp"
         android:elevation="10dp"
-        android:outlineProvider="bounds"
         android:padding="10dp"
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/call"
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="10dp"
