--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -8,12 +8,12 @@
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="100dp"
         android:layout_marginRight="10dp"
         app:boxCornerRadiusBottomEnd="5dp"
         android:textColorHint="@color/white"
+        android:layout_height="50dp"
         app:boxStrokeColor="@color/white"
         app:hintTextColor="@color/white"
         android:layout_marginBottom="10dp"
@@ -22,9 +22,10 @@
         android:id="@+id/autoCompleteTextView1"
         android:layout_width="match_parent"
         android:background="@color/white"
+        android:layout_height="match_parent"
         android:backgroundTint="@color/black"
         android:textColorHint="@color/white"
-        android:layout_height="wrap_content"
+
         android:layout_below="@+id/tv1"
         android:ems="10" />
     </com.google.android.material.textfield.TextInputLayout>
