--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainDashboard">
+    android:background="@color/white">
     <TextView
         android:id="@+id/welcomeText"
         android:layout_margin="20dp"
@@ -39,7 +38,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_height="0dp">
             <TextView
-                android:id="@+id/profile"
+                android:id="@+id/a1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="A1"
@@ -61,9 +60,9 @@
                 android:visibility="invisible"
 
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/profile"
+                app:layout_constraintStart_toEndOf="@id/a1"
                 android:layout_margin="10dp"
-                app:layout_constraintEnd_toStartOf="@id/History"
+                app:layout_constraintEnd_toStartOf="@id/b1"
                 android:background="@color/primaryColor"
                 android:textColor="@color/white"
                 android:padding="10dp"
@@ -71,7 +70,7 @@
                 android:elevation="5dp"
                 />
             <TextView
-                android:id="@+id/History"
+                android:id="@+id/b1"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -99,7 +98,7 @@
             app:layout_constraintTop_toBottomOf="@id/row1"
             android:layout_height="0dp">
             <TextView
-                android:id="@+id/help"
+                android:id="@+id/a2"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:elevation="5dp"
@@ -119,19 +118,19 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/help"
+                app:layout_constraintStart_toEndOf="@id/a2"
                 android:background="@color/primaryColor"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
                 android:visibility="invisible"
-                app:layout_constraintEnd_toStartOf="@id/emergency"
+                app:layout_constraintEnd_toStartOf="@id/b2"
                 android:text=""
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:elevation="5dp"
                 />
             <TextView
-                android:id="@+id/emergency"
+                android:id="@+id/b2"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -158,7 +157,7 @@
             app:layout_constraintTop_toBottomOf="@id/row2"
             android:layout_height="0dp">
             <TextView
-                android:id="@+id/status"
+                android:id="@+id/a3"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:text="A3"
@@ -178,19 +177,19 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/status"
+                app:layout_constraintStart_toEndOf="@id/a3"
                 android:background="@color/primaryColor"
                 android:visibility="invisible"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
-                app:layout_constraintEnd_toStartOf="@id/logout"
+                app:layout_constraintEnd_toStartOf="@id/b3"
                 android:text="Map"
                 android:padding="10dp"
                 android:textAlignment="center"
                 android:elevation="5dp"
                 />
             <TextView
-                android:id="@+id/logout"
+                android:id="@+id/b3"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 app:layout_constraintTop_toTopOf="parent"
