--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -44,6 +44,7 @@
         android:background="#C0000000"
         android:layout_gravity="end"
         app:itemTextColor="@color/white"
+        app:itemIconTint="@color/white"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/navigation_header_main"
         app:menu="@menu/menu_main" />
