--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -11,19 +11,19 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="100dp"
         android:layout_marginRight="10dp"
-        app:boxCornerRadiusBottomEnd="5dp"
-        android:textColorHint="@color/white"
+        app:hintAnimationEnabled="true"
+        android:textColorHint="@color/black"
         android:layout_height="50dp"
-        app:boxStrokeColor="@color/white"
-        app:hintTextColor="@color/white"
+        app:boxStrokeColor="@color/black"
+        app:hintTextColor="@color/black"
         android:layout_marginBottom="10dp"
-        android:hint="Search Hare">
+        android:hint="Search Here">
     <com.google.android.material.textfield.MaterialAutoCompleteTextView
         android:id="@+id/autoCompleteTextView1"
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="match_parent"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/primaryColor"
         android:textColorHint="@color/white"
 
         android:layout_below="@+id/tv1"
