--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -5,30 +5,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <View
+        android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="10dp"
-        app:hintAnimationEnabled="true"
-        android:textColorHint="@color/black"
-        android:layout_height="50dp"
-        app:boxStrokeColor="@color/black"
-        app:hintTextColor="@color/black"
-        android:layout_marginBottom="10dp"
-        android:hint="Search Here">
+        />
     <com.google.android.material.textfield.MaterialAutoCompleteTextView
         android:id="@+id/autoCompleteTextView1"
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="match_parent"
-        android:backgroundTint="@color/primaryColor"
+        android:background="@drawable/round_box"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_margin="20dp"
+        android:hint="Search here"
+        android:layout_height="50dp"
         android:textColorHint="@color/white"
-
+        android:layout_marginTop="100dp"
         android:layout_below="@+id/tv1"
         android:ems="10" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -40,6 +36,6 @@
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintBottom_toBottomOf="parent"
-        map:layout_constraintTop_toBottomOf="@+id/text"
+        map:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView1"
         tools:context=".MapsActivity" />
 </LinearLayout>
